kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-frontend-search
  namespace: core-frontend
  labels:
    app: core-frontend-search
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: core-frontend-search
  template:
    metadata:
      labels:
        app: core-frontend-search
    spec:
      terminationGracePeriodSeconds: 60
      nodeSelector:
        agentpool: userpool
      hostAliases:
        - ip: 131.145.121.88
          hostnames:
            - api.core.ac.uk
      volumes:
        - name: cf-origin-ca
          configMap:
            name: cf-origin-ca
      containers:
        - name: core-frontend-search
          image: ${IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: cf-origin-ca
              mountPath: /etc/ssl/cf
              readOnly: true
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 10"]
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 5
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 1000m
              memory: 768Mi
            limits:
              cpu: 2000m
              memory: 1500Mi
