kube/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: core-frontend-search
  namespace: core-frontend
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-system
  hostnames:
    - core.preferans.uk
    - core.ac.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /search
        - path:
            type: PathPrefix
            value: /works
        - path:
            type: PathPrefix
            value: /outputs
        - path:
            type: PathPrefix
            value: /data-providers
        - path:
            type: PathPrefix
            value: /static/search
      backendRefs:
        - name: core-frontend-search
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /display
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /outputs
      backendRefs:
        - name: core-frontend-search
          port: 80
